# demotui

./: Cargo.toml  README.md
demotui/: Cargo.toml
demotui-backend/: Cargo.toml
demotui-backend/src/: actor.rs  backend.rs  context.rs  dispatcher.rs  executor.rs  lib.rs
demotui-backend/src/actors/: add.rs  mod.rs
demotui-config/: Cargo.toml
demotui-config/src/: chord.rs  key.rs  keymap.rs  lib.rs  rule.rs
demotui-frontend/: Cargo.toml
demotui-frontend/src/: actor.rs  context.rs  lib.rs  router.rs
demotui-frontend/src/actors/: info_act.rs  mod.rs
demotui-frontend/src/tui/: frontend.rs  mod.rs
demotui-frontend/src/tui/core/: confirm.rs  help.rs  input.rs  mod.rs  popup.rs  prof_tmpl.rs  profile.rs  service.rs  status_bar.rs  template.rs  which.rs
demotui-frontend/src/tui/widget/: confirm.rs  hello.rs  help.rs  input.rs  mod.rs  popup.rs  prof_tmpl.rs  profile.rs  root.rs  service.rs  status_bar.rs  template.rs  which.rs
demotui-shared/: Cargo.toml
demotui-shared/src/: consts.rs  data.rs  layer.rs  lib.rs  ro_cell.rs
demotui-shared/src/backend/: event.rs  op.rs
demotui-shared/src/backend/actopts/: add_opt.rs  mod.rs
demotui-shared/src/frontend/: event.rs  mod.rs  op.rs
demotui-shared/src/frontend/actopts/: info_opt.rs  mod.rs
demotui-shared/src/macros/: event.rs  mod.rs  modules.rs  render.rs
demotui-shared/src/utils/: log_utils.rs
demotui-widgets/: Cargo.toml
demotui/src/: app.rs  dispatcher.rs  executor.rs  main.rs  signals.rs  term.rs
