[workspace]
resolver = "2"
members = [
    "demotui", "demotui-backend", "demotui-frontend", "demotui-shared", "demotui-widgets",
]

[workspace.package]
# 发布相关的通用配置
version = "0.1.0"
edition = "2021"
description = "A demo TUI application"
license = "MIT OR Apache-2.0"
keywords = ["tui", "demo", "terminal"]
categories = ["command-line-utilities", "terminal"]
readme = "README.md"
homepage = "https://github.com/yourusername/demotui"
repository = "https://github.com/yourusername/demotui"

# Release 构建配置
[workspace.package.metadata.release]
# 发布时是否执行 cargo test
pre-release-commands = ["cargo test"]
# 发布后是否执行 cargo publish
publish = true

# 工作空间的 release 配置
[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"
incremental = false
opt-level = "z"  # 优化大小，也可以用 "s" 或 "3"

[workspace.dependencies]
log = "0.4.22"
env_logger = { version = "0.11.7", default-features = false, features = ["humantime"] }
is-root = "0.1.4"
clap = { version = "4.5.17", features = ["derive"] }
clap_complete = "4.5.26"
self-replace = { version = "1.5.0", default-features = false }
anyhow = "1.0.86"
thiserror = "2"
serde = { version = "1.0.210", features = ["derive"] }
minreq = { version = "2.12.0", features = ["proxy", "https", "json-using-serde"] }
serde_json = "1.0.128"
serde_yml = "0.0.12"
url = { version = "^2" }
base64 = { version = "^0" }
ordered-float = {version = "5.1.0"}
libc = "0.2.176"

# 将可选依赖分组
futures-lite = { version = "2.6.0", default-features = false }
strum = { version = "0.26.3", features = ["derive"] }
derive_more = { version = "2", default-features = false, features = ["debug"] }
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
crossterm = { version = "0.28.1", default-features = false, features = ["event-stream"] }
ratatui = { version = "0.29.0", default-features = false, features = ["crossterm"] }
