[package]
name = "demotui-config"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
metadata.workspace = true

[dependencies]
demotui-shared = {path = "../demotui-shared"}

anyhow = {workspace = true}
crossterm = {workspace = true}
