[package]
name = "demotui-frontend"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
metadata.workspace = true

[dependencies]
demotui-shared = {path = "../demotui-shared"}

log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# 通过 features 控制依赖
futures-lite = { workspace = true, optional = true }
strum = { workspace = true, optional = true }
derive_more = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
crossterm = { workspace = true, optional = true }
ratatui = { workspace = true, optional = true }

[features]
tui = [
  "dep:ratatui",
  "dep:crossterm",
  "dep:tokio",
  "dep:futures-lite",
  "dep:derive_more",
  "dep:strum",
]

default = ["tui"]