[package]
name = "demotui-shared"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
metadata.workspace = true

[dependencies]
tokio = {workspace = true}
crossterm = {workspace = true}
derive_more = {workspace = true}
anyhow = {workspace = true}
log = {workspace = true}
env_logger = {workspace = true}
ordered-float = {workspace = true}