[package]
name = "demotui-widgets"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
metadata.workspace = true

[dependencies]
